Resolve "Create purchase add page"